# sparkweaver.core

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
docs_style/: doxygen-awesome-darkmode-toggle.js  doxygen-awesome-fragment-copy-button.js  doxygen-awesome-interactive-toc.js  doxygen-awesome-paragraph-link.js  doxygen-awesome-sidebar-only-darkmode-toggle.css  doxygen-awesome-sidebar-only.css  doxygen-awesome-tabs.js  doxygen-awesome.css
include/: SparkWeaverCore.h
src/: Builder.cpp  Builder.h  Color.h  Config.h  Engine.cpp  Engine.h  Node.cpp  Node.h  NodeConfig.h  NodeConfigParam.h  NodeLink.h
src/nodes/: DsDmxRgb.h  FxBreathe.h  FxPulse.h  FxStrobe.h  MxAdd.h  MxAnd.h  MxOr.h  MxSequence.h  MxSubtract.h  MxSwitch.h  SrColor.h  SrTrigger.h  TrChance.h  TrCycle.h  TrDelay.h  TrRandom.h  TrSequence.h
src/utils/: SafeVectorReader.h  random.h  string.h
test/: demo.cpp
